# DongOS

./: .gitignore  README.md  build-DongOS.sh  cleanup.sh  reconfig_os.sh  run.sh
src/: CMakeLists.txt  generate-iso.sh  linker.ld
src/kernel/include/: kernel.h  kstdio.h  kstring.h  kterminal.h
src/kernel/include/kstdio/: kprintf.h
src/kernel/src/: GDT.c  kernel.c  kprintf.c  kputchar.c  kputs.c  kstring.c  kterminal.c  start.s
src/kernel/src/kstdio/: kprintf.c
